--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -7,13 +7,16 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Профессиональная разработка и поддержка web-сайтов со скидкой 15%"
     />
-  
-    <title>Freelance Portfolio</title>
+    <meta name="title" content="Создать сайт с профессионалом и получить скидку 15%">
+    <meta name="keywords" content="Нужен качественный сайт? Лендинг? Или полноценный магазин? Даю гарантию выполненной работы со скидкой до 15% по промокоду WebFrom38">
+    <meta http-equiv="Content-Language" content="ru">
+    <meta name="Author" content="Полунин Лев">
+    <title>WebFrom38</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>У вас не поддерживается JavaScript, напишите мне на почту - webfrom38@gmail.com </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
